--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,13 @@
 {
     "plugins": [
-        "p5js"
+        "p5js",
+        "cypress"
     ],
     "env": {
         "browser": true,
         "es2021": true,
-        "p5js/p5": true
+        "p5js/p5": true,
+        "cypress/globals": true
     },
     "extends": [
         "airbnb-base",
@@ -17,5 +19,11 @@
         "ecmaVersion": "latest"
     },
     "rules": {
+        "cypress/no-assigning-return-values": "error",
+        "cypress/no-unnecessary-waiting": "error",
+        "cypress/assertion-before-screenshot": "warn",
+        "cypress/no-force": "warn",
+        "cypress/no-async-tests": "error",
+        "cypress/no-pause": "error"
     }
 }
